--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"grunt-contrib-uglify": "~0.2.0",
 		"grunt-karma": "~0.5.0",
 		"grunt-ngmin": "~0.0.2",
-		"karma": "~0.9.4"
+		"karma": "~0.9.4",
+		"karma-coverage": "~0.0.3"
 	},
 	"engines": {
 		"node": ">=0.8.0"
