--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
 	],
 	"dependencies": {
 		"angular": "~1.x",
-		"moment": "~2.x"
+		"moment": "~2.1.0"
 	},
 	"devDependencies": {
 		"angular-mocks": "~1.0.x"
