--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"matchdep": "~0.1.1",
 		"grunt": "~0.4.1",
 		"grunt-contrib-uglify": "~0.2.0",
+		"grunt-contrib-jshint": "~0.6.0",
 		"grunt-karma": "~0.5.0",
 		"grunt-ngmin": "~0.0.2",
 		"karma": "~0.9.4",
@@ -15,6 +16,6 @@
 		"node": ">=0.8.0"
 	},
 	"scripts": {
-		"test": "./node_modules/.bin/karma start"
+		"test": "./node_modules/.bin/grunt test"
 	}
 }
