--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: node_js
 node_js:
   - 0.10
 before_script:
-  - npm install -g bower grunt-cli
+  - npm install -g bower@1.0.x grunt-cli
   - bower install
