--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
 	"name": "angular-moment",
 	"version": "0.1.6",
+	"repository": {
+		"type": "git",
+		"url": "http://github.com/urish/angular-moment.git"
+	},
 	"dependencies": {},
 	"devDependencies": {
 		"matchdep": "~0.1.1",
 		"grunt": "~0.4.1",
 		"grunt-contrib-uglify": "~0.2.0",
 		"grunt-contrib-jshint": "~0.6.0",
-		"grunt-karma": "~0.5.0",
-		"karma": "~0.9.4",
-		"karma-coverage": "~0.0.3"
+		"grunt-karma": "~0.7.0",
+		"karma": "~0.10.0",
+		"karma-coverage": "~0.1.0"
 	},
 	"engines": {
 		"node": ">=0.8.0"
