--- a/bower.json
+++ b/bower.json
@@ -9,11 +9,11 @@
 	"ignore": [
 	],
 	"dependencies": {
-		"angular": "~1.x",
-		"moment": "~2.1.0"
+		"angular": ">=1.0.0 <1.3.0",
+		"moment": ">=2.0.0 <2.3.0"
 	},
 	"devDependencies": {
-		"angular-mocks": "~1.0.x"
+		"angular-mocks": "1.2.x"
 	},
 	"repository": {
 		"type": "git",
