--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 		"grunt": "~0.4.1",
 		"grunt-contrib-uglify": "~0.2.0",
 		"grunt-contrib-jshint": "~0.6.0",
-		"grunt-karma": "~0.7.0",
-		"karma": "~0.11.0",
-		"karma-coverage": "~0.1.0"
+		"grunt-karma": "~0.7.2",
+		"karma": "~0.11.10",
+		"karma-coverage": "~0.1.0",
+		"karma-jasmine": "~0.1.5",
+		"karma-phantomjs-launcher": "~0.1.1"
 	},
 	"engines": {
 		"node": ">=0.8.0"
