--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
 	],
 	"dependencies": {
 		"angular": ">=1.0.0 <1.3.0",
-		"moment": ">=2.0.0 <2.6.0"
+		"moment": ">=2.0.0 <2.6.0",
+		"moment-timezone": "~0.0.3"
 	},
 	"devDependencies": {
 		"angular-mocks": "1.2.x"
