--- a/bower.json
+++ b/bower.json
@@ -10,11 +10,11 @@
 	],
 	"dependencies": {
 		"angular": ">=1.0.0 <1.3.0",
-		"moment": ">=2.0.0 <2.6.0",
-		"moment-timezone": "~0.0.3"
+		"moment": ">=2.0.0 <2.6.0"
 	},
 	"devDependencies": {
-		"angular-mocks": "1.2.x"
+		"angular-mocks": "1.2.x",
+		"moment-timezone": "~0.0.3"
 	},
 	"repository": {
 		"type": "git",
