--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"karma": "~0.11.10",
 		"karma-coverage": "~0.1.0",
 		"karma-jasmine": "~0.1.5",
-		"karma-phantomjs-launcher": "~0.1.1"
+		"karma-phantomjs-launcher": "~0.1.1",
+		"coveralls": "~2.7.1"
 	},
 	"engines": {
 		"node": ">=0.8.0"
