--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "matchdep": "~0.3.0",
     "grunt": "~0.4.1",
+    "load-grunt-tasks": "0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-karma": "~0.8.2",
