--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
 	},
 	"devDependencies": {
 		"angular-mocks": "1.2.x",
-		"moment-timezone": "~0.0.3"
+		"moment-timezone": "0.0.5"
 	},
 	"repository": {
 		"type": "git",
