--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "angular-moment",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "repository": {
     "type": "git",
     "url": "http://github.com/urish/angular-moment.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "moment": ">=2.0.0 <2.7.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "load-grunt-tasks": "0.4.0",
