--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "angular-moment",
   "version": "0.7.1",
+  "main": "angular-moment.js",
   "repository": {
     "type": "git",
     "url": "http://github.com/urish/angular-moment.git"
