--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-uglify": "0.8.1",
     "grunt-karma": "~0.10.1",
     "grunt-ngdocs": "^0.2.7",
+    "jasmine-core": "2.2.0",
     "karma": "~0.12.0",
     "karma-coverage": "~0.2.0",
     "karma-jasmine": "~0.3.5",
