--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
 	],
 	"dependencies": {
 		"angular": ">=1.2.0 <1.5.0",
-		"moment": ">=2.8.0 <2.11.0"
+		"moment": ">=2.8.0 <2.11.0",
+		"moment-duration-format": "~1.3.0"
 	},
 	"devDependencies": {
 		"angular-mocks": "1.4.x",
