--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-moment",
-  "version": "0.10.3",
+  "version": "1.0.0-beta.1",
   "main": "angular-moment.js",
   "repository": {
     "type": "git",
