Change from moment dependency to moment-timezone for changeTimezone() not able to find moment-timezone module

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "LICENSE"
   ],
   "dependencies": {
-    "moment": ">=2.8.0 <2.13.0"
+    "moment-timezone": "^0.5.2"
   },
   "devDependencies": {
     "bower": "1.6.3",
