--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "moment": ">=2.8.0 <2.13.0"
   },
   "devDependencies": {
-    "bower": "1.6.3",
-    "coveralls": "2.11.4",
-    "grunt": "0.4.5",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-jshint": "0.11.3",
-    "grunt-contrib-uglify": "0.9.2",
-    "grunt-karma": "0.12.1",
+    "bower": "1.7.9",
+    "coveralls": "2.11.9",
+    "grunt": "1.0.1",
+    "grunt-cli": "1.2.0",
+    "grunt-contrib-jshint": "1.0.0",
+    "grunt-contrib-uglify": "1.0.1",
+    "grunt-karma": "0.12.2",
     "grunt-ngdocs": "0.2.9",
-    "jasmine-core": "2.3.4",
-    "phantomjs": "^1.9.19",
-    "karma": "0.13.19",
-    "karma-coverage": "0.5.3",
-    "karma-jasmine": "0.3.6",
-    "karma-phantomjs-launcher": "0.2.1",
-    "load-grunt-tasks": "3.3.0"
+    "jasmine-core": "2.4.1",
+    "phantomjs-prebuilt": "2.1.7",
+    "karma": "0.13.22",
+    "karma-coverage": "0.5.5",
+    "karma-jasmine": "0.3.8",
+    "karma-phantomjs-launcher": "1.0.0",
+    "load-grunt-tasks": "3.5.0"
   },
   "engines": {
     "node": ">=0.10.0"
