fix(deps): add AngularJS v1.7.0
The bower dependency range has been modified to support up through
AngularJS v1.7.0, release in the summer of 2018.  Additionally, the
bower registry has been updated to the current registry via the addition
of .bowerrc.

Closes #303.

--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   "devDependencies": {
     "bower": "1.7.9",
     "coveralls": "2.11.9",
-    "grunt": "1.0.1",
+    "grunt": "^1.0.3",
     "grunt-cli": "1.2.0",
     "grunt-contrib-jshint": "1.0.0",
     "grunt-contrib-uglify": "1.0.1",
     "grunt-karma": "0.12.2",
     "jasmine-core": "2.4.1",
-    "phantomjs-prebuilt": "2.1.7",
     "karma": "0.13.22",
     "karma-coverage": "0.5.5",
     "karma-jasmine": "0.3.8",
     "karma-phantomjs-launcher": "1.0.0",
-    "load-grunt-tasks": "3.5.0"
+    "load-grunt-tasks": "3.5.0",
+    "phantomjs-prebuilt": "^2.1.16"
   },
   "engines": {
     "node": ">=0.10.0"
