--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: node_js
 sudo: false
 node_js:
   - 4
-  - 5
   - 6
-  - 7
+  - 8
+  - node
 
 before_script:
   - npm run bower
+
 after_success:
   - cat ./coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js
